# adk_porker_2025

./: .env.example  .gitignore  README.md  log_viewer.py  main.py  pyproject.toml  test_api_agent.py  test_betting_round_bug.py  test_llm_player.py  test_turn_phase_bug.py
.cursor/rules/: python.mdc
agents/: README.md
agents/team1_agent/: agent.py
agents/team1_agent/agents/: postflop_agent.py
agents/team1_agent/callbacks/: after_model_callback.py
agents/team1_agent/tools/: calculate_ppr.py
agents/team1_agent/utils/: card_utils.py
agents/team3_agent/: __init__.py  agent.py
agents/team3_agent/agents/: action_agent.py  analysis_agent.py  check_analysis_agent.py  eval_hand_agent.py  make_decision_from_percentage_agent.py  postflop_action_agent.py  postflop_agent.py  preflop_agent.py  preflop_before_decision_agent.py  preflop_decision_agent.py  sample_winrate_agent.py
agents/team3_agent/callbacks/: after_model_callback.py
agents/team3_agent/tools/: analyze_opponents.py  calculate_probabilities.py  calculate_role.py  hand_history_tools.py  hand_history_tools.py.py  hands_eval.py  monte_carlo_probabilities.py  parse_suit.py  position_check.py
agents/team3_agent/utils/: card_utils.py
agents/team4_agent/agents/: analysis_agent.py  (+2 more)
docs/: design.md  game_state_format.md  requirements.md
poker/: __init__.py  agent_manager.py  cli_ui.py  evaluator.py  flet_ui.py  game.py  game_models.py  game_ui.py  player_models.py  player_stats.py  setup_ui.py  shared_state.py  state_server.py  viewer_ui.py
tests/: test_evaluator.py  test_game.py  test_models.py
(+5 files in other folders)
